--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li>
-                <a href="speakers.html">
+                <a href="program2.html">
                     PROGRAM
                 </a>
             </li>
