--- a/www/kakola.html
+++ b/www/kakola.html
@@ -23,7 +23,9 @@
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="css/carousel.css" rel="stylesheet">
-    <link href="css/infopage.css" rel="stylesheet">
+    <link href="css/speaker3.css" rel="stylesheet">
+    <link href="css/program.css" rel="stylesheet">
+    <link href="css/kakola.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
@@ -55,8 +57,8 @@
             <li>
                 <a href="infopage.html">
                 <i class="fa fa-info" aria-hidden="true"></i>
-            </a>
-                    </li>
+                </a>
+            </li>
         </ul>
     </div>
     <div id="content">
@@ -69,70 +71,76 @@
         </nav>
 
         <div class="container">
-        <div class="tabbar">
+            <div class = tabbar>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
+                      <!-- Indicators -->
+                      <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                      </ol>
 
-        <div class ="tab INFO" onclick="openTab(event, 'INFO')">INFO</div>
-        <div class ="tab FAQ" onclick="openTab(event, 'FAQ')">FAQ</div>
-                </div>
-                <div class = "SHDW"></div>
-            <div id="FAQ" class="tabcontent">
-             <h1>Frequently asked questions</h1>
-            <div class="vivid-simple-accordion" id="vivid-simple-accordion-8129">
-        <div class="simple-accordion-group closed">
-        <div class="simple-accordion-title-shell">
-            <h2 class="panel-title">Is this a day event?</h2>        </div>
-        <div class="simple-accordion-description">
-            <p>Yes. The event schedule starts at 10am and finishes at 17pm on both event days.</p>        </div>
-    </div>
-        <div class="simple-accordion-group closed">
-        <div class="simple-accordion-title-shell">
-            <h2 class="panel-title">How to get to the SHIFT</h2>        </div>
-        <div class="simple-accordion-description">
-            <h4>Reaching Turku</h4><p>Turku is a transportation hub hosting both an airport and a harbour. You can also reach the city by a train, a bus or a car.</p><h4>By Air</h4><p>You may reach Turku by air. Please visit the below web site for more information.</p><a href="http://www.finavia.fi/en/turku/" target="_system">http://www.finavia.fi/en/turku/</a><h4>Train</h4><p>You can reach Turku by a train from Helsinki or Tampere. Please consult the below website for timetables and tickets.</p><a href="http://www.vr.fi/" target="_system">www.vr.fi/</a><h4>Ferry</h4><p>There are ferry connections to Turku from Stockholm.</p><p>Please consult the below websites for timetables and tickets.</p><a href="http://www.siljaline.fi" target="_system">www.siljaline.fi</a><h4>Bus</h4><p>Please consult the below websites for timetables and tickets.</p><a href="http://www.matkahuolto.fi" target="_system">www.matkahuolto.fi</a><a href="http://www.onnibus.fi">www.onnibus.fi</a>        </div>
-    </div>
-        <div class="simple-accordion-group closed">
-        <div class="simple-accordion-title-shell">
-            <h2 class="panel-title">About Turku</h2>        </div>
-        <div class="simple-accordion-description">
-            <p>Turku is the oldest city in Finland and boasts a rich historical and cultural heritage. It is home to the oldest school as well as the oldest theatre in Finland.The SHIFT is continuing this tradition of trailblazing by gathering some of the sharpest minds in the world to actively shape our global future heritage.  Located at the south-western coast of Finland it is a gateway to one of the most beautiful archipelagos in the world.</p><p>The event venue is the Turku Castle dating back to the 1300th century. At this truly unique venue you can hear the wings of history, while making history as part of the SHIFT.  </p>        </div>
-    </div>
-        <div class="simple-accordion-group closed">
-        <div class="simple-accordion-title-shell">
-            <h2 class="panel-title">Where to stay in Turku</h2>        </div>
-        <div class="simple-accordion-description">
-            <p>There are plenty of hotels in and around Turku, but we recommend that you check out our partners.</p><span id="docs-internal-guid-4ecf294a-1464-776a-927c-d8a595fd32b5"><a href="https://www.cumulus.fi/en" target="_system">https://www.cumulus.fi/en</a></span><p></p><a href="https://www.sokoshotels.fi/en" target="_system">https://www.sokoshotels.fi/en</a>        </div>
-    </div>
-        <div class="simple-accordion-group closed">
-        <div class="simple-accordion-title-shell">
-            <h2 class="panel-title">Is this a tech event?</h2>        </div>
-        <div class="simple-accordion-description">
-            <p><span id="docs-internal-guid-e9b0f153-099d-3a44-2595-11aecffcafe2"></span></p><p dir="ltr" style="line-height:1.38;margin-top:0pt;margin-bottom:0pt;" rel="line-height:1.38;margin-top:0pt;margin-bottom:0pt;">We certainly are not an event only for the tech geeks drooling over the latest gadget. Having said that, we do acknowledge that technology is a driver of change in the fields of health, learning, and energy. We are about tech empowering humans, not the other way around.</p><p>So your answer is yes and no. </p>        </div>
-    </div>
-        <div class="simple-accordion-group closed">
-        <div class="simple-accordion-title-shell">
-            <h2 class="panel-title">Is this an event for me?</h2>        </div>
-        <div class="simple-accordion-description">
-            <span id="docs-internal-guid-e9b0f153-099d-b261-56ad-382480bd9e1a"><p dir="ltr" style="line-height:1.38;margin-top:0pt;margin-bottom:0pt;">It is crucial for any individual or company to stay relevant. The SHIFT is for pioneers and thought leaders in the fields of health, learning, and energy. So, if you work in those fields, it is pivotal to join The SHIFT, and learn about the latest trends and developments.</p></span><p>Plus we have food. And circus. And music. Comprende? </p>        </div>
-    </div>
-    </div>
-                </div>
-       <div id="INFO" class="tabcontent">
-           <h1>The SHIFT 2017</h1>
-           <p>SHIFT is a business festival where every participant is crucial for making SHIFT happen. At SHIFT you can participate in round-table discussions, one-on-one meetings, and workshops, as well as listen to keynotes and panel discussions. SHIFT will take place at the Castle of Turku on the 31st of May and the 1st of June 2017.
-               Behind SHIFT Business Festival is a non-profit organization Shift Ry, registered in Turku, Finland. Our team of active citizens consists of mainly young professionals, entrepreneurs and students. We are motivated not by money, but by making a positive impact to our society. That is why we SHIFTers, work pro-bono to create a better future.
-               SHIFT is backed by companies and the city of Turku, as well as Turku Chamber of Commerce and The Federation of Finnish Enterprises, while the event itself is put together by local JCI members, start-up actives and students.</p>
-           </div>
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <div class = "tab SPK" onclick="location.href='speakers3.html'">SPEAKERS</div>
+                            <div class = "tab ENT" onclick="location.href='program2.html'">ENTERTAINMENT</div>
+                            <div class = "tab WRK" onclick="location.href='program2.html'">WORKSHOPS</div>
+                        </div>
 
+                        <div class="item">
+                            <div class = "tab RND" onclick="location.href='program2.html'">ROUNDTABLES</div>
+                            <div class = "tab PANEL" onclick="location.href='program2.html'">PANEL DISCUSSIONS</div>
+                            <div class = "tab BRD" onclick="location.href='program2.html'">BOARDROOM CHALLENGE</div>
+                        </div>
 
+                        <div class="item">
+                            <div class = "tab MM" onclick="location.href='matchma.html'">MATCHMAKING</div>
+                            <div class = "tab PRE" onclick="location.href='program2.html'">PRE AND SIDE EVENTS</div>
+                            <div class = "tab KAK active" onclick="location.href='kakola.html'">KAKOLA</div>
+                        </div>
+
+                        <div class="item">
+                            <div class = "tab DEMO" onclick="openTab(event,'DEMO')">DEMO STAGE</div>
+                            <div class = "tab SNR" onclick="location.href='program2.html'">SENIORS</div>
+                            <div class = "tab PRG" onclick="location.href='program2.html'">PROGRAM</div>
+                        </div>
+						<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+							<span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+							<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+				  </div>
+            </div>
+            </div>
+            <div class = "SHDW"></div>
+            <div class = "kakoladesc">
+                <h3>WED 31.5. 19.00-02.00</h3>
+                <h2>KAKOLA AFTER PARTY</h2>
+                <h3>THIS IS A PARTY YOU CERTAINLY DON’T WANT TO MISS!</h3>
+                <br>
+                <h4>Have you ever attended a business party in prison?</h4>
+                <br>
+                <p>Sounds a bit crazy, right? Well, SHIFT will make that happen! Last year’s SHIFT’s Official After Party at Kakola Prison was a huge success. Now it’s back, bigger and bolder!
+                On the 31st of May, the old, notorious Kakola Prison, built for the most hardened criminals in Finland, will be transformed into a relaxing party atmosphere for businessmen and influencers. There will be many surprises waiting for the SHIFT attendants</p>
+                <br>
+                <h4>This year’s party theme is Shifting Realities.</h4>
+                <br>
+                <p>Take a walk through the aisles of the haunted jail cells, enjoy the last hours of the evening in the magical courtyard or take the galaxy stairs to different realities. The possibilities are endless. You can choose to head over to the playful, gaming room, order a drink at the bar or enter the partner lounge area, while you’re meeting new and inspiring people. There will be art to admire, groovy music to dance to, incredible performances to watch and much more to explore.</p>
+            </div>
+            </div>
         </div>
 <script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/accordion.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
-<script src="js/tab.js"></script>
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
+<script src="js/accordion.js"></script>
+<script src="js/more.js"></script>
 <script>
-
 
     $(".tab").on("tap", function() {
 
@@ -142,9 +150,7 @@
         }
     });
 
-
     $(document).ready(function(){
-            openTab(event, 'INFO');
         function qs(key) {
             key = key.replace(/[*+?^$.\[\]{}()|\\\/]/g, "\\$&"); // escape RegEx meta chars
             var match = location.search.match(new RegExp("[?&]" + key + "=([^&]+)(&|$)"));
@@ -270,6 +276,5 @@
         });
     };
 </script>
-
 </body>
 </html>
