--- a/www/matchma.html
+++ b/www/matchma.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/program.css" rel="stylesheet">
 	<style>
 		::-webkit-scrollbar {
 			display:none;
@@ -72,11 +73,58 @@
             </a>
         </nav>
 
-        <div class="container" style="padding-top: 5vh;">
+        <div class="container">
+            <div class = tabbar>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
+                      <!-- Indicators -->
+                      <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                      </ol>
+
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <div class = "tab SPK" onclick="location.href='speakers3.html'">SPEAKERS</div>
+                            <div class = "tab ENT" onclick="location.href='program2.html'">ENTERTAINMENT</div>
+                            <div class = "tab WRK" onclick="location.href='program2.html'">WORKSHOPS</div>
+                        </div>
+
+                        <div class="item">
+                            <div class = "tab RND" onclick="location.href='program2.html'">ROUNDTABLES</div>
+                            <div class = "tab PANEL" onclick="location.href='program2.html'">PANEL DISCUSSIONS</div>
+                            <div class = "tab BRD" onclick="location.href='program2.html'">BOARDROOM CHALLENGE</div>
+                        </div>
+
+                        <div class="item">
+                            <div class = "tab MM active" onclick="location.href='matchma.html'">MATCHMAKING</div>
+                            <div class = "tab PRE" onclick="location.href='program2.html'">PRE AND SIDE EVENTS</div>
+                            <div class = "tab KAK" onclick="location.href='kakola.html'">KAKOLA</div>
+                        </div>
+
+                        <div class="item">
+                            <div class = "tab DEMO" onclick="openTab(event,'DEMO')">DEMO STAGE</div>
+                            <div class = "tab SNR" onclick="location.href='program2.html'">SENIORS</div>
+                            <div class = "tab PRG" onclick="location.href='program2.html'">PROGRAM</div>
+                          </div>
+						  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+						<span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+						</a>
+						<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+							<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+                    </div>
+            </div>
+            </div>
+            <div class = "SHDW"></div>
 			<h4>Get networking now with</h4>
 			<a href="https://app.brella.io/SHIFT2017/" target="_system" style="width:60vw; padding: 10vh 0;"><img src="img/brella-newlogo.svg" style="width:60vw; padding: 6vh 0;"></a>
 			<h1 style="margin-bottom:6vh;">Matchmaking available for professional pass only</h1>
-			<div style="width: 100%; height: 47.2vh; background: url('img/purple-haze.jpeg') center center no-repeat;background-size: cover;border-top: 1px solid #e64696;">
+			<div style="width: 100%; height: 44.3vh; background: url('img/purple-haze.jpeg') center center no-repeat;background-size: cover;border-top: 1px solid #e64696;">
 				<h4 style="width:70vw; margin: 6vh auto;">Upgrade your ticket to professional pass at<a href="" style="display: block; margin: 3vh;"><img src="img/lyyti.png" style="display: block; margin: 3vh auto; width: 40vw;"></img></a> or <a href=""style="display: block; margin: 3vh;"><h1>AT THE <i class="fa fa-info-circle" aria-hidden="true"></i> DESK</h1></a></h4>
 			</div>
         </div>
