--- a/www/speakers3.html
+++ b/www/speakers3.html
@@ -138,7 +138,7 @@
             <div class="vivid-simple-accordion" id="vivid-simple-accordion-8129">
                 <div class="simple-accordion-group closed">
                     <div class="simple-accordion-title-shell">
-                        <div class="spkimg" style="background-image:url('img/speakers/gerd-leonhard.jpg')"><img id='lines' src=img/speakers/viivat.png></div>
+                        <div class="spkimg" style="background-image:url('img/speakers/gerd-leonhard.jpg')"></div>
                             <div class="spkinfo">
                                 <h2 class="panel-title">GERD <br>LEONHARD</h2>
                                 <div class="hashtags"><p>#future #business #humanity</p></div>
@@ -154,7 +154,7 @@
 
                 <div class="simple-accordion-group closed">
                     <div class="simple-accordion-title-shell">
-                        <div class="spkimg" style="background-image:url('img/speakers/melody-hossaini.jpg')"><img id='lines' src=img/speakers/viivat.png></div>
+                        <div class="spkimg" style="background-image:url('img/speakers/melody-hossaini.jpg')"></div>
                             <div class="spkinfo">
                                 <h2 class="panel-title">MELODY <br>HOSSAINI</h2>
                                 <div class="hashtags"><p>#socialbusiness #development</p></div>
@@ -169,7 +169,7 @@
 
                 <div class="simple-accordion-group closed">
                     <div class="simple-accordion-title-shell">
-                        <div class="spkimg" style="background-image:url('img/speakers/Lauri.jpg')"><img id='lines' src=img/speakers/viivat.png></div>
+                        <div class="spkimg" style="background-image:url('img/speakers/Lauri.jpg')"></div>
                             <div class="spkinfo">
                                 <h2 class="panel-title">LAURI <br>JÄRVILEHTO</h2>
                                 <div class="hashtags"><p>#future #work</p></div>
@@ -183,7 +183,7 @@
 
                 <div class="simple-accordion-group closed">
                     <div class="simple-accordion-title-shell">
-                        <div class="spkimg" style="background-image:url('img/speakers/Cecilia-Tham.png')"><img id='lines' src=img/speakers/viivat.png></div>
+                        <div class="spkimg" style="background-image:url('img/speakers/Cecilia-Tham.png')"></div>
                             <div class="spkinfo">
                                 <h2 class="panel-title">CECILIA <br>THAM</h2>
                                 <div class="hashtags"><p>#innovation #community #co-creation</p></div>
@@ -199,7 +199,7 @@
 
                 <div class="simple-accordion-group closed">
                     <div class="simple-accordion-title-shell">
-                        <div class="spkimg" style="background-image:url('img/speakers/alan-laubsch.jpg')"><img id='lines' src=img/speakers/viivat.png></div>
+                        <div class="spkimg" style="background-image:url('img/speakers/alan-laubsch.jpg')"></div>
                             <div class="spkinfo">
                                 <h2 class="panel-title">ALAN <br> LAUBSCH</h2>
                                 <div class="hashtags"><p>#blockchain #ecosystem #network</p></div>
@@ -214,7 +214,7 @@
 
                 <div class="simple-accordion-group closed">
                     <div class="simple-accordion-title-shell">
-                        <div class="spkimg" style="background-image:url('img/speakers/Christoph Auer-Welsbach.jpg')"><img id='lines' src=img/speakers/viivat.png></div>
+                        <div class="spkimg" style="background-image:url('img/speakers/Christoph Auer-Welsbach.jpg')"></div>
                             <div class="spkinfo">
                                 <h2 class="panel-title" style="font-size:3.5vh;letter-spacing:2px">CHRISTOPH <br> AUER-WELSBACH</h2>
                                 <div class="hashtags"><p>#artificial intelligence #future</p></div>
@@ -229,7 +229,7 @@ Experienced founder, product manager, venture community builder, and speaker on 
 
                 <div class="simple-accordion-group closed">
                     <div class="simple-accordion-title-shell">
-                        <div class="spkimg" style="background-image:url('img/speakers/NeilHarbisson.jpg')"><img id='lines' src=img/speakers/viivat.png></div>
+                        <div class="spkimg" style="background-image:url('img/speakers/NeilHarbisson.jpg')"></div>
                             <div class="spkinfo">
                                 <h2 class="panel-title">NEIL <br>HARBISSON</h2>
                                 <div class="hashtags"><p>#cybernetics #humanandmachine</p></div>
@@ -244,7 +244,7 @@ Experienced founder, product manager, venture community builder, and speaker on 
 
                 <div class="simple-accordion-group closed">
                     <div class="simple-accordion-title-shell">
-                        <div class="spkimg" style="background-image:url('img/speakers/Henrik-Hautop-Lund.jpg')"><img id='lines' src=img/speakers/viivat.png></div>
+                        <div class="spkimg" style="background-image:url('img/speakers/Henrik-Hautop-Lund.jpg')"></div>
                             <div class="spkinfo">
                                 <h2 class="panel-title">HENRIK<br>HAUTOP LUND</h2>
                                 <div class="hashtags"><p>#learning #robotics #creativity</p></div>
@@ -259,7 +259,7 @@ Experienced founder, product manager, venture community builder, and speaker on 
 
                 <div class="simple-accordion-group closed">
                     <div class="simple-accordion-title-shell">
-                        <div class="spkimg" style="background-image:url('img/speakers/Hugh-Williams.jpg')"><img id='lines' src=img/speakers/viivat.png></div>
+                        <div class="spkimg" style="background-image:url('img/speakers/Hugh-Williams.jpg')"></div>
                             <div class="spkinfo">
                                 <h2 class="panel-title">HUGH <br>WILLIAMS</h2>
                                 <div class="hashtags"><p>#innovation #impact #leadership</p></div>
