--- a/www/speakers3.html
+++ b/www/speakers3.html
@@ -101,25 +101,24 @@
 				  <div class="carousel-inner" role="listbox">
 					<div class="item active">
 						<div class = "tab SPK active" onclick="location.href='speakers3.html'">SPEAKERS</div>
-						<div class = "tab ENT" onclick="location.href='program2.html'">ENTERTAINMENT</div>
-						<div class = "tab WRK" onclick="location.href='program2.html'">WORKSHOPS</div>
+						<div class = "tab ENT" onclick="location.href='entertainment.html'">ENTERTAINMENT</div>
+						<div class = "tab WRK" onclick="location.href='workshop.html'">WORKSHOPS</div>
 					</div>
-
 					<div class="item">
-						<div class = "tab RND" onclick="location.href='program2.html'">ROUNDTABLES</div>
-						<div class = "tab PANEL" onclick="location.href='program2.html'">PANEL DISCUSSIONS</div>
-						<div class = "tab BRD" onclick="location.href='program2.html'">BOARDROOM CHALLENGE</div>
+						<div class = "tab RND" onclick="location.href='roundtable.html'">ROUNDTABLES</div>
+						<div class = "tab PANEL" onclick="location.href='panel.html'">PANEL DISCUSSIONS</div>
+						<div class = "tab BRD" onclick="location.href='boardroom.html'">BOARDROOM CHALLENGE</div>
 					</div>
 
 					<div class="item">
 						<div class = "tab MM" onclick="location.href='matchma.html'">MATCHMAKING</div>
-						<div class = "tab PRE" onclick="location.href='program2.html'">PRE AND SIDE EVENTS</div>
+						<div class = "tab PRE" onclick="location.href='preandside.html'">PRE AND SIDE EVENTS</div>
 						<div class = "tab KAK" onclick="location.href='kakola.html'">KAKOLA</div>
 					</div>
 
 					<div class="item">
-						<div class = "tab DEMO" onclick="openTab(event,'DEMO')">DEMO STAGE</div>
-						<div class = "tab SNR" onclick="location.href='program2.html'">SENIORS</div>
+						<div class = "tab DEMO" onclick="location.href='demos.html'">DEMO STAGE</div>
+						<div class = "tab SNR" onclick="location.href='suomi100.html'">100 SENIORS</div>
 						<div class = "tab PRG" onclick="location.href='program2.html'">PROGRAM</div>
 					</div>
 				</div>
@@ -298,7 +297,7 @@ Experienced founder, product manager, venture community builder, and speaker on 
             else
                 return 0;
         }
-        $('#myCarousel').carousel(qs('slide'));
+
     });
     // SIDE MENU
 
