--- a/www/boardroom.html
+++ b/www/boardroom.html
@@ -23,12 +23,9 @@
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/speaker3.css" rel="stylesheet">
     <link href="css/program.css" rel="stylesheet">
-	<style>
-		::-webkit-scrollbar {
-			display:none;
-		}
-	</style>
+    <link href="css/kakola.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
@@ -90,68 +87,79 @@
             </a>
         </nav>
 
-        <div class="container" style="overflow-y:hidden">
+        <div class="container">
             <div class = tabbar>
                 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
-						<li data-target="#myCarousel" data-slide-to="3"></li>
-					</ol>
+                      <!-- Indicators -->
+                      <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                      </ol>
 
-					<!-- Wrapper for slides -->
-					<div class="carousel-inner" role="listbox">
-						<div class="item">
-						<div class = "tab SPK" onclick="location.href='speakers3.html'">SPEAKERS</div>
-						<div class = "tab ENT" onclick="location.href='entertainment.html'">ENTERTAINMENT</div>
-						<div class = "tab WRK" onclick="location.href='workshop.html'">WORKSHOPS</div>
-					</div>
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+                        <div class="item">
+                            <div class = "tab SPK" onclick="location.href='speakers3.html'">SPEAKERS</div>
+                            <div class = "tab ENT" onclick="location.href='entertainment.html'">ENTERTAINMENT</div>
+                            <div class = "tab WRK" onclick="location.href='workshop.html'">WORKSHOPS</div>
+                        </div>
 
-					<div class="item">
-						<div class = "tab RND" onclick="location.href='roundtable.html'">ROUNDTABLES</div>
-						<div class = "tab PANEL" onclick="location.href='panel.html'">PANEL DISCUSSIONS</div>
-						<div class = "tab BRD" onclick="location.href='boardroom.html'">BOARDROOM CHALLENGE</div>
-					</div>
+                        <div class="item active">
+                            <div class = "tab RND" onclick="location.href='roundtable.html'">ROUNDTABLES</div>
+                            <div class = "tab PANEL" onclick="location.href='panel.html'">PANEL DISCUSSIONS</div>
+                            <div class = "tab BRD active" onclick="location.href='boardroom.html'">BOARDROOM CHALLENGE</div>
+                        </div>
 
-					<div class="item active">
-						<div class = "tab MM active" onclick="location.href='matchma.html'">MATCHMAKING</div>
-						<div class = "tab PRE" onclick="location.href='preandside.html'">PRE AND SIDE EVENTS</div>
-						<div class = "tab KAK" onclick="location.href='kakola.html'">KAKOLA</div>
-					</div>
+                        <div class="item">
+                            <div class = "tab MM" onclick="location.href='matchma.html'">MATCHMAKING</div>
+                            <div class = "tab PRE" onclick="location.href='preandside.html'">PRE AND SIDE EVENTS</div>
+                            <div class = "tab KAK" onclick="location.href='kakola.html'">KAKOLA</div>
+                        </div>
 
-					<div class="item">
-						<div class = "tab DEMO" onclick="location.href='demos.html'">DEMO STAGE</div>
-						<div class = "tab SNR" onclick="location.href='suomi100.html'">100 SENIORS</div>
-						<div class = "tab PRG" onclick="location.href='program2.html'">PROGRAM</div>
-					</div>
-					  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-					<span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-					</a>
-					<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-						<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
+                        <div class="item">
+                            <div class = "tab DEMO" onclick="location.href='demos.html'">DEMO STAGE</div>
+                            <div class = "tab SNR" onclick="location.href='suomi100.html'">100 SENIORS</div>
+                            <div class = "tab PRG" onclick="location.href='program2.html'">PROGRAM</div>
+                        </div>
+						<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+							<span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+						</a>
+						<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+							<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+						</a>
+				  </div>
             </div>
             </div>
             <div class = "SHDW"></div>
-			<h4>Get networking now with</h4>
-			<a href="https://app.brella.io/SHIFT2017/" target="_system" style="width:60vw; padding: 10vh 0;"><img src="img/brella-newlogo.svg" style="width:60vw; padding: 6vh 0;"></a>
-			<h1 style="margin-bottom:6vh;">Matchmaking available for professional pass only</h1>
-			<div style="width: 100%; height: 44.3vh; background: url('img/purple-haze.jpeg') center center no-repeat;background-size: cover;border-top: 1px solid #e64696;">
-				<h4 style="width:70vw; margin: 6vh auto;">Upgrade your ticket to professional pass at<a href="" style="display: block; margin: 3vh;"><img src="img/lyyti.png" style="display: block; margin: 3vh auto; width: 40vw;"></img></a> or <a href=""style="display: block; margin: 3vh;"><h1>AT THE <i class="fa fa-info-circle" aria-hidden="true"></i> DESK</h1></a></h4>
-			</div>
+				<div class = "kakoladesc">
+					<h3>WHAT IS THE BOARDROOM CHALLENGE?</h3>
+					Are you as an organization facing a specific challenge? Or do you simply want to do things better? Your hopes and challenges could be anything – we offer the solution by bringing you the Boardroom Challenge.
+					<h3>HOW DOES IT WORK?</h3>
+					Your organization gets the chance to showcase your specific hope or challenge to the SHIFT boardroom. The boardroom consists of thought leaders, people that have “done it” and rising stars. They will help out with your issue, leaving you with concrete learning. The Boardroom Challenge takes place on one of our main stages. Everybody can learn. Everybody can join. You are the star.
+					SHIFT 2017 offers 4 companies the unique chance to take part in the first ever Boardroom Challenge.
+					<h3>WHAT COULD BE SUITABLE CHALLENGES OR HOPES?</h3>
+					You tell us! It could be anything from sales to going international, attracting the right people, keeping your staff motivated or the like. You can apply by writing us a short story about your company the hopes you have and/or the challenges you face.
+				</div>
+            </div>
         </div>
-    </div>
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
 
-<script type='application/javascript' src='js/inAppBrowser.js'></script>
+<script src="js/accordion.js"></script>
+<script src="js/more.js"></script>
 <script>
+
+    $(".tab").on("tap", function() {
+
+        $('.tab').removeClass('active');
+        if (!$(this).hasClass('active')) {
+            $(this).addClass('active');
+        }
+    });
+
     $(document).ready(function(){
         function qs(key) {
             key = key.replace(/[*+?^$.\[\]{}()|\\\/]/g, "\\$&"); // escape RegEx meta chars
