--- a/www/schedule.html
+++ b/www/schedule.html
@@ -21,6 +21,7 @@
     <script src="xdk/init-dev.js"></script>     <!-- normalizes device and document ready events, see README for details -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/shift-styles.css">
+	<link rel="stylesheet" href="css/program.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/shift-styles-schedule.css">
 
@@ -88,17 +89,17 @@
 
         <div class="container scheBody">
 		<div class="tabbar">
-			<div class ="tab INFO" onclick="onWednesday()" style="font-size: 3.5vw;">WEDNESDAY</div>
-			<div class ="tab FAQ" onclick="onThursday()" style="font-size: 3.5vw;">THURSDAY</div>
+			<div class ="tab ENT" onclick="onWednesday()" style="font-size: 3.5vw;">WEDNESDAY</div>
+			<div class ="tab" onclick="onThursday()" style="font-size: 3.5vw;">THURSDAY</div>
 		</div>
 		<div class="SHDW"></div>
 		<div class="container-fluid padding">
             <div class="floatStage">
                 <div class="area"><h5>MAIN<br>STAGE</h5></div>
                 <div class="area"><h5>PARK</h5></div>
+                <div class="area"><h5>SUMMER<br>STAGE</h5></div>
                 <div class="area"><h5>LORD'S<br>CELLAR</h5></div>
-                <div class="area"><h5>WORK-<br>SHOP</h5></div>
-				<div class="area"><h5>SUMMER<br>STAGE</h5></div>
+				<div class="area"><h5>WORK-<br>SHOP</h5></div>
             </div>
 			<div class="schedule">
                 <div class="verticalLine"></div>
@@ -232,12 +233,11 @@
             var stagehtml = ["main-stage", "park", "summerstage", "lordscellar", "workshop"];
             for (var x=0; x<5; x++){
                 for (var y=0; y<data.thu[stage[x]].length; y++) {
-                    document.getElementById(stagehtml[x]).innerHTML += "<div class='box " + data.thu[stage[x]][y].duration + ' ' + data.thu[stage[x]][y].nextin + ' ' + data.thu[stage[x]][y].startin  +   "' ' id='" + data.thu[stage[x]][y].category + "'  ><div class='tick " + data.wed[stage[x]][y].category + "' ></div><div class='detail'><p class='etime'>" + data.thu[stage[x]][y].time + "</p><p class='title'>" + data.thu[stage[x]][y].title + "</p><p class='desc'>" + data.thu[stage[x]][y].description + "</p></div></div>"
+                    document.getElementById(stagehtml[x]).innerHTML += "<div class='box " + data.thu[stage[x]][y].duration + ' ' + data.thu[stage[x]][y].nextin + ' ' + data.thu[stage[x]][y].startin  +   "' ' id='" + data.thu[stage[x]][y].category + "'  ><div class='tick " + data.thu[stage[x]][y].category + "' ></div><div class='detail'><p class='etime'>" + data.thu[stage[x]][y].time + "</p><p class='title'>" + data.thu[stage[x]][y].title + "</p><p class='desc'>" + data.thu[stage[x]][y].description + "</p></div></div>"
                 }
             }
         });
     };
-	console.log(nowDate);
 	(nowDate.year === 2017 && nowDate.month === 6 && nowDate.day === 1) ? onThursday(): onWednesday();
 </script>
 </body>
